// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmountInputDemo Component JSON 1`] = `
.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c5 {
  line-height: 1.5;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  width: 20rem;
  height: 3.2rem;
  cursor: text;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c5::-webkit-input-placeholder {
  color: #ccc;
}

.c5::-moz-placeholder {
  color: #ccc;
}

.c5:-ms-input-placeholder {
  color: #ccc;
}

.c5::placeholder {
  color: #ccc;
}

.c2 {
  position: relative;
  display: inline-block;
  outline: none;
}

.c4 {
  position: absolute;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  bottom: 50%;
  line-height: 1rem;
  font-size: 1.4em;
  color: rgba(0,0,0,0.65);
  left: 1rem;
}

.c3 {
  position: absolute;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  bottom: 50%;
  line-height: 1rem;
  font-size: 1.4em;
  color: rgba(0,0,0,0.65);
  left: 1rem;
}

.c6 {
  position: absolute;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  bottom: 50%;
  right: 1rem;
  color: #999999;
}

.c1 {
  position: relative;
  display: inline-block;
}

.c0 {
  float: left;
  margin-left: 50px;
}

<div>
  <div
    className="c0"
  >
    <p>
      formatter AmountInput
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <span
          className="c3  c4"
          style={Object {}}
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c5"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          placeholder="请填写金额"
          prefix={
            <CSSComponent
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {},
                  "themeConfig": Object {},
                  "themeState": Object {
                    "disabled": undefined,
                  },
                }
              }
            >
              ¥
            </CSSComponent>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "color": "#333333",
              "height": "3.2rem",
              "paddingBottom": "0rem",
              "paddingLeft": "3rem",
              "paddingRight": "3.5rem",
              "paddingTop": "0rem",
            }
          }
          value=""
        />
      </div>
    </span>
    <p>
      default AmountInput
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <span
          className="c3  c4"
          style={Object {}}
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c5"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          placeholder="请填写金额"
          prefix={
            <CSSComponent
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {},
                  "themeConfig": Object {},
                  "themeState": Object {
                    "disabled": undefined,
                  },
                }
              }
            >
              ¥
            </CSSComponent>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "color": "#333333",
              "height": "3.2rem",
              "paddingBottom": "0rem",
              "paddingLeft": "3rem",
              "paddingRight": "3.5rem",
              "paddingTop": "0rem",
            }
          }
          value=""
        />
      </div>
    </span>
    <p>
      禁用状态 
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <span
          className="c3  c4"
          style={Object {}}
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c5"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          placeholder=""
          prefix={
            <CSSComponent
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {},
                  "themeConfig": Object {},
                  "themeState": Object {
                    "disabled": true,
                  },
                }
              }
            >
              ¥
            </CSSComponent>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "borderBottomColor": "#cccccc",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "0.1rem",
              "borderLeftColor": "#cccccc",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "0.1rem",
              "borderRightColor": "#cccccc",
              "borderRightStyle": "solid",
              "borderRightWidth": "0.1rem",
              "borderTopColor": "#cccccc",
              "borderTopStyle": "solid",
              "borderTopWidth": "0.1rem",
              "color": "#333333",
              "cursor": "not-allowed",
              "height": "3.2rem",
              "paddingBottom": "0rem",
              "paddingLeft": "3rem",
              "paddingRight": "3.5rem",
              "paddingTop": "0rem",
            }
          }
          value=""
        />
      </div>
    </span>
  </div>
  <div
    className="c0"
  >
    <p>
      small size
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <span
          className="c3  c4"
          style={Object {}}
        >
          <span
            className=""
            style={
              Object {
                "color": "blue",
                "fontSize": "1.4rem",
              }
            }
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c5"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          placeholder="请填写金额"
          prefix={
            <CSSComponent
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {},
                  "themeConfig": Object {
                    "__partName": "AmountInputPrefix",
                    "normal": Object {
                      "color": "blue",
                      "fontSize": 14,
                    },
                  },
                  "themeState": Object {
                    "disabled": undefined,
                  },
                }
              }
            >
              ¥
            </CSSComponent>
          }
          readOnly={false}
          size="small"
          style={
            Object {
              "color": "#333333",
              "height": "5rem",
              "paddingBottom": "0rem",
              "paddingLeft": "3rem",
              "paddingRight": "3.5rem",
              "paddingTop": "0rem",
              "width": "40rem",
            }
          }
          value=""
        />
      </div>
    </span>
    <p>
      default size
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <span
          className="c3  c4"
          style={Object {}}
        >
          <span
            className=""
            style={
              Object {
                "color": "blue",
                "fontSize": "1.4rem",
              }
            }
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c5"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          placeholder="请填写金额"
          prefix={
            <CSSComponent
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {},
                  "themeConfig": Object {
                    "__partName": "AmountInputPrefix",
                    "normal": Object {
                      "color": "blue",
                      "fontSize": 14,
                    },
                  },
                  "themeState": Object {
                    "disabled": undefined,
                  },
                }
              }
            >
              ¥
            </CSSComponent>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "color": "#333333",
              "height": "5rem",
              "paddingBottom": "0rem",
              "paddingLeft": "3rem",
              "paddingRight": "3.5rem",
              "paddingTop": "0rem",
              "width": "40rem",
            }
          }
          value=""
        />
      </div>
    </span>
    <p>
      large size
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <span
          className="c3  c4"
          style={Object {}}
        >
          <span
            className=""
            style={
              Object {
                "color": "blue",
                "fontSize": "1.4rem",
              }
            }
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c5"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          placeholder=""
          prefix={
            <CSSComponent
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {},
                  "themeConfig": Object {
                    "__partName": "AmountInputPrefix",
                    "normal": Object {
                      "color": "blue",
                      "fontSize": 14,
                    },
                  },
                  "themeState": Object {
                    "disabled": true,
                  },
                }
              }
            >
              ¥
            </CSSComponent>
          }
          readOnly={false}
          size="large"
          style={
            Object {
              "borderBottomColor": "#cccccc",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "0.1rem",
              "borderLeftColor": "#cccccc",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "0.1rem",
              "borderRightColor": "#cccccc",
              "borderRightStyle": "solid",
              "borderRightWidth": "0.1rem",
              "borderTopColor": "#cccccc",
              "borderTopStyle": "solid",
              "borderTopWidth": "0.1rem",
              "color": "#333333",
              "cursor": "not-allowed",
              "height": "5rem",
              "paddingBottom": "0rem",
              "paddingLeft": "3rem",
              "paddingRight": "3.5rem",
              "paddingTop": "0rem",
              "width": "40rem",
            }
          }
          value=""
        />
      </div>
    </span>
  </div>
  <div
    className="c0"
  >
    <p>
      受限Input
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <span
          className="c3  c4"
          style={Object {}}
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c5"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          prefix={
            <CSSComponent
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {},
                  "themeConfig": Object {},
                  "themeState": Object {
                    "disabled": undefined,
                  },
                }
              }
            >
              ¥
            </CSSComponent>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "color": "#333333",
              "height": "3.2rem",
              "paddingBottom": "0rem",
              "paddingLeft": "3rem",
              "paddingRight": "3.5rem",
              "paddingTop": "0rem",
            }
          }
          value=""
        />
      </div>
    </span>
    <p>
      有默认值的 受限Input
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <span
          className="c3  c4"
          style={Object {}}
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c5"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          prefix={
            <CSSComponent
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {},
                  "themeConfig": Object {},
                  "themeState": Object {
                    "disabled": undefined,
                  },
                }
              }
            >
              ¥
            </CSSComponent>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "color": "#333333",
              "height": "3.2rem",
              "paddingBottom": "0rem",
              "paddingLeft": "3rem",
              "paddingRight": "3.5rem",
              "paddingTop": "0rem",
            }
          }
          value="123,456"
        />
        <i
          className="lugia-icon-reminder_close c6  c7"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={Object {}}
        />
      </div>
    </span>
  </div>
  <div
    className="c0"
  >
    <p>
      amountPrefix: '¥' transform: false 
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <span
          className="c3  c4"
          style={Object {}}
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c5"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          prefix={
            <CSSComponent
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {},
                  "themeConfig": Object {},
                  "themeState": Object {
                    "disabled": undefined,
                  },
                }
              }
            >
              ¥
            </CSSComponent>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "color": "#333333",
              "height": "3.2rem",
              "paddingBottom": "0rem",
              "paddingLeft": "3rem",
              "paddingRight": "3.5rem",
              "paddingTop": "0rem",
            }
          }
          value=""
        />
      </div>
    </span>
    <p>
      amountPrefix: '$' transform: false 
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={Object {}}
    >
      <div
        className="c2"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <span
          className="c3  c4"
          style={Object {}}
        >
          <span
            className=""
            style={Object {}}
          >
            $
          </span>
        </span>
        <input
          autoFocus={false}
          className="c5"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          prefix={
            <CSSComponent
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {},
                  "themeConfig": Object {},
                  "themeState": Object {
                    "disabled": undefined,
                  },
                }
              }
            >
              $
            </CSSComponent>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "color": "#333333",
              "height": "3.2rem",
              "paddingBottom": "0rem",
              "paddingLeft": "3rem",
              "paddingRight": "3.5rem",
              "paddingTop": "0rem",
            }
          }
          value=""
        />
      </div>
    </span>
  </div>
</div>
`;

exports[`AmountInputDemo props: placeholder  1`] = `
.c4 {
  line-height: 1.5;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  width: 20rem;
  height: 3.2rem;
  cursor: text;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c4::-webkit-input-placeholder {
  color: #ccc;
}

.c4::-moz-placeholder {
  color: #ccc;
}

.c4:-ms-input-placeholder {
  color: #ccc;
}

.c4::placeholder {
  color: #ccc;
}

.c1 {
  position: relative;
  display: inline-block;
  outline: none;
}

.c3 {
  position: absolute;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  bottom: 50%;
  line-height: 1rem;
  font-size: 1.4em;
  color: rgba(0,0,0,0.65);
  left: 1rem;
}

.c2 {
  position: absolute;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  bottom: 50%;
  line-height: 1rem;
  font-size: 1.4em;
  color: rgba(0,0,0,0.65);
  left: 1rem;
}

.c0 {
  position: relative;
  display: inline-block;
}

<span
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={Object {}}
>
  <div
    className="c1"
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
  >
    <span
      className="c2  c3"
      style={Object {}}
    >
      <span
        className=""
        style={Object {}}
      >
        ¥
      </span>
    </span>
    <input
      autoFocus={false}
      className="c4"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      placeholder="请填写内容"
      prefix={
        <CSSComponent
          themeProps={
            Object {
              "onLugia": [Function],
              "propsConfig": Object {},
              "themeConfig": Object {},
              "themeState": Object {
                "disabled": undefined,
              },
            }
          }
        >
          ¥
        </CSSComponent>
      }
      readOnly={false}
      size="default"
      style={
        Object {
          "color": "#333333",
          "height": "3.2rem",
          "paddingBottom": "0rem",
          "paddingLeft": "3rem",
          "paddingRight": "3.5rem",
          "paddingTop": "0rem",
        }
      }
      value=""
    />
  </div>
</span>
`;

exports[`AmountInputDemo props: placeholder  2`] = `
.c4 {
  line-height: 1.5;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  width: 20rem;
  height: 3.2rem;
  cursor: text;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c4::-webkit-input-placeholder {
  color: #ccc;
}

.c4::-moz-placeholder {
  color: #ccc;
}

.c4:-ms-input-placeholder {
  color: #ccc;
}

.c4::placeholder {
  color: #ccc;
}

.c1 {
  position: relative;
  display: inline-block;
  outline: none;
}

.c3 {
  position: absolute;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  bottom: 50%;
  line-height: 1rem;
  font-size: 1.4em;
  color: rgba(0,0,0,0.65);
  left: 1rem;
}

.c2 {
  position: absolute;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  bottom: 50%;
  line-height: 1rem;
  font-size: 1.4em;
  color: rgba(0,0,0,0.65);
  left: 1rem;
}

.c0 {
  position: relative;
  display: inline-block;
}

<span
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={Object {}}
>
  <div
    className="c1"
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
  >
    <span
      className="c2  c3"
      style={Object {}}
    >
      <span
        className=""
        style={Object {}}
      >
        ¥
      </span>
    </span>
    <input
      autoFocus={false}
      className="c4"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      placeholder=""
      prefix={
        <CSSComponent
          themeProps={
            Object {
              "onLugia": [Function],
              "propsConfig": Object {},
              "themeConfig": Object {},
              "themeState": Object {
                "disabled": undefined,
              },
            }
          }
        >
          ¥
        </CSSComponent>
      }
      readOnly={false}
      size="default"
      style={
        Object {
          "color": "#333333",
          "height": "3.2rem",
          "paddingBottom": "0rem",
          "paddingLeft": "3rem",
          "paddingRight": "3.5rem",
          "paddingTop": "0rem",
        }
      }
      value=""
    />
  </div>
</span>
`;
